fixed docs code spacing

--- a/src/sass/pages/_docs.sass
+++ b/src/sass/pages/_docs.sass
@@ -43,7 +43,7 @@
       width: 714px
       margin-bottom: 24px
       code
-        padding: 34px 34px 14px
+        padding: 34px
     ul, ol
       margin-bottom: 24px
     ul li:before
